# goit-pyweb-hw-14

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4244d914bd65_avatar.py  8b7f62f4fb42_users.py  aea6bddb5b48_verify.py  d6829d744146_init.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/: database.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py  environment.py
src/services/templates/: reset-email.html  verify-email.html
tests/: conftest.py  test_e2e_main.py  test_unit_repository_contacts.py
